# gpodder-nano-server

./: .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
gpodder_nano_server/: container.py
gpodder_nano_server/application/: devices.py  main.py
gpodder_nano_server/containers/: device.py
gpodder_nano_server/domain/: device.py  user.py
gpodder_nano_server/infra/: db.py
gpodder_nano_server/queries/: builder.py  user.py
gpodder_nano_server/services/: device.py  episode.py  subscriiption.py
gpodder_nano_server/test/: conftest.py
gpodder_nano_server/test/services/: test_device.py
test/: conftest.py  test_hello.py
test/services/: test_device.py
